--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> -->
 
     <!-- TODO: update build path -->
-    <link rel="stylesheet" type="text/css" href="">
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="./css/main.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href=""> -->
 </head>
 <body>
     <h1>Hey Marcy</h1>
+    <a>click me</a>
+
 
     <!-- TODO: update build path -->
     <script src="./js/app.js"></script>
